[gd_scene load_steps=12 format=3 uid="uid://b8p7thf15drtv"]

[ext_resource type="TileSet" uid="uid://dn3bhirvjqcga" path="res://themes/mainTileSet.tres" id="1_1qpbj"]
[ext_resource type="Script" path="res://actors/moreCam.gd" id="1_6ruip"]
[ext_resource type="Shader" path="res://themes/background.gdshader" id="1_aopxk"]
[ext_resource type="PackedScene" uid="uid://dhhlvptab405m" path="res://actors/healthBar.tscn" id="1_e7tcr"]
[ext_resource type="PackedScene" uid="uid://dvvgapjvlupgk" path="res://actors/player.tscn" id="1_mlvxe"]
[ext_resource type="Script" path="res://actors/floorRandomizer.gd" id="4_0mn2h"]
[ext_resource type="PackedScene" uid="uid://d2tif8h5ih2yu" path="res://actors/mouse.tscn" id="4_jd241"]
[ext_resource type="Script" path="res://scenes/objectSpawner.gd" id="9_8djf2"]
[ext_resource type="Script" path="res://scenes/pentaSpawner.gd" id="10_kja2i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o5qv4"]
shader = ExtResource("1_aopxk")

[sub_resource type="CanvasTexture" id="CanvasTexture_qhtqs"]

[node name="main" type="Node2D"]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_6ruip")

[node name="Timer" type="Timer" parent="Camera2D"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="TextureRect" parent="Background"]
material = SubResource("ShaderMaterial_o5qv4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("CanvasTexture_qhtqs")
expand_mode = 2
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = ExtResource("1_1qpbj")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(0, 131072, 1, -65536, 196608, 2, -1, 196608, 2, 65535, 196608, 2, -65537, 196608, 2, 65536, 196608, 1, 131071, 131072, 1, 131070, 131072, 1, 65534, 196608, 2, -2, 196608, 2, 196607, 196608, 2, 196606, 196608, 2, -262148, 196608, 1, -196612, 196608, 2, -131076, 196608, 1, -65540, 196608, 2, -4, 196608, 2, 65532, 131072, 1, 131068, 131072, 1, 196604, 196608, 1, 262140, 196608, 2, -262147, 196608, 2, -196611, 196608, 1, -131075, 196608, 2, -65539, 196608, 1, -3, 196608, 2, 65533, 196608, 2, 131069, 196608, 2, 196605, 131072, 1, 262141, 196608, 1, 327677, 196608, 2, -262146, 196608, 2, -196610, 131072, 1, -131074, 196608, 2, -65538, 196608, 1, 262142, 196608, 2, 327678, 131072, 1, -262145, 131072, 1, -196609, 196608, 1, -131073, 196608, 2, 262143, 131072, 1, 327679, 196608, 2, -327680, 196608, 2, -262144, 131072, 1, -196608, 196608, 2, -131072, 196608, 1, 131072, 196608, 2, 196608, 131072, 1, 262144, 196608, 2, -327679, 196608, 1, -262143, 196608, 2, -196607, 196608, 2, -131071, 196608, 2, -65535, 196608, 2, 1, 196608, 2, 65537, 196608, 1, 131073, 196608, 2, 196609, 196608, 2, 262145, 131072, 1, -327678, 131072, 1, -262142, 131072, 1, -196606, 196608, 2, -131070, 196608, 2, -65534, 131072, 1, 2, 196608, 2, 65538, 196608, 1, 131074, 131072, 1, 196610, 196608, 2, 262146, 196608, 1, -327677, 196608, 1, -262141, 196608, 2, -196605, 196608, 1, -131069, 196608, 1, -65533, 196608, 2, 3, 196608, 2, 65539, 131072, 1, 131075, 196608, 2, 196611, 196608, 2, 262147, 196608, 2, -327676, 196608, 1, -262140, 196608, 2, -196604, 196608, 2, -131068, 131072, 1, -65532, 196608, 2, 4, 196608, 1, 65540, 196608, 1, 131076, 131072, 1, 196612, 196608, 2, 262148, 196608, 2, -262149, 196608, 2, -196613, 131072, 1, -131077, 131072, 1, -65541, 196608, 2, 262139, 196608, 2, 196603, 196608, 2, 131067, 196608, 1, 65531, 196608, 2, -5, 131072, 1, 327676, 196608, 1, 327675, 196608, 1, -327685, 393216, 4, -327684, 524288, 5, -327683, 458752, 5, -327682, 393216, 5, -327681, 393216, 4, -393216, 393216, 5, -393215, 524288, 5, -393214, 458752, 5, -393213, 393216, 4, -393212, 393216, 5)
layer_1/name = "wall"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 5
layer_1/tile_data = PackedInt32Array(-327686, 262144, 5, -65542, 262144, 5, -262150, 262144, 5, -196614, 262144, 5, -131078, 262144, 5, -6, 262144, 5, 65530, 262144, 5, 131066, 262144, 5, 196602, 262144, 5, 262138, 262144, 5, -393211, 196608, 5, -327675, 196608, 5, -262139, 196608, 5, -196603, 196608, 5, -131067, 196608, 5, -65531, 196608, 5, 5, 196608, 5, 65541, 196608, 5, 131077, 196608, 5, 196613, 196608, 5, -393221, 131072, 7, -393220, 131072, 7, -393219, 131072, 7, -393218, 131072, 7, -393217, 131072, 7, -458752, 131072, 7, -458751, 131072, 7, -458750, 131072, 7, -458749, 131072, 7, -458748, 131072, 7, -458747, 196608, 4, -393222, 262144, 4, 327674, 262144, 6, 262149, 196608, 6, 327675, 131072, 6, 327676, 131072, 6, 327677, 131072, 6, 327678, 131072, 6, 327679, 131072, 6, 262144, 131072, 6, 262145, 131072, 6, 262146, 131072, 6, 262147, 131072, 6, 262148, 131072, 6, 393211, 393216, 5, 393212, 458752, 4, 393213, 458752, 5, 393214, 524288, 5, 393215, 393216, 5, 327680, 458752, 4, 327681, 458752, 4, 327682, 458752, 5, 327683, 524288, 5, 327684, 458752, 4)
script = ExtResource("4_0mn2h")

[node name="objectSpawner" type="Node2D" parent="."]
z_index = 1
z_as_relative = false
y_sort_enabled = true
script = ExtResource("9_8djf2")

[node name="pos1" type="Node2D" parent="objectSpawner"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-53, -74)

[node name="pos2" type="Node2D" parent="objectSpawner"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -74)

[node name="pos3" type="Node2D" parent="objectSpawner"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(53, -74)

[node name="pos4" type="Node2D" parent="objectSpawner"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-51, -21)

[node name="pos5" type="Node2D" parent="objectSpawner"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(51, -25)

[node name="pos6" type="Node2D" parent="objectSpawner"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-51, 53)

[node name="pos7" type="Node2D" parent="objectSpawner"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(51, 53)

[node name="pos8" type="Node2D" parent="objectSpawner"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, 26)

[node name="pentaSpawner" type="Node2D" parent="."]
script = ExtResource("10_kja2i")

[node name="pos1" type="Node2D" parent="pentaSpawner"]
position = Vector2(-32, -48)

[node name="pos2" type="Node2D" parent="pentaSpawner"]
position = Vector2(32, -48)

[node name="pos3" type="Node2D" parent="pentaSpawner"]
position = Vector2(-48, 0)

[node name="pos4" type="Node2D" parent="pentaSpawner"]
position = Vector2(48, 0)

[node name="pos5" type="Node2D" parent="pentaSpawner"]
position = Vector2(-32, 32)

[node name="pos6" type="Node2D" parent="pentaSpawner"]
position = Vector2(32, 32)

[node name="enemies" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Mouse" parent="." instance=ExtResource("4_jd241")]

[node name="object" type="Node2D" parent="."]
z_index = 1
z_as_relative = false
y_sort_enabled = true

[node name="player" parent="." instance=ExtResource("1_mlvxe")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="healthBar" parent="UI" instance=ExtResource("1_e7tcr")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -22.0
offset_right = 103.0
offset_bottom = -6.0
grow_vertical = 0

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_timer_timeout"]
